app functionality finish

--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
         </div>
 
         <footer class="footer">
-            <p>&copy; Company 2015</p>
+            <p>Lanit demo 2020</p>
         </footer>
 
     </div>
