--- a/templates/signup.html
+++ b/templates/signup.html
@@ -7,8 +7,9 @@
     <link href="https://getbootstrap.com/docs/3.4/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <link href="https://getbootstrap.com/docs/3.4/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
-
-    <link href="../css/signup.css" rel="stylesheet">
+    <link href="../static/css/signup.css" rel="stylesheet">
+    <script src="../static/js/jquery-1.11.2.js"></script>
+    <script src="../static/js/signUp.js"></script>
 
   </head>
 
@@ -18,7 +19,7 @@
       <div class="header">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation" ><a href="main">Home</a></li>
+            <li role="presentation" ><a href="showHome">Home</a></li>
             <li role="presentation"><a href="#">Sign In</a></li>
             <li role="presentation" class="active"><a href="#">Sign Up</a></li>
           </ul>
@@ -43,7 +44,7 @@
 
 
       <footer class="footer">
-        <p>&copy; Company 2015</p>
+        <p>&copy; Lanit demo 2020</p>
       </footer>
 
     </div>
